fix: fix border bleed on forms

--- a/apps/theme/formBuilder/styles/theme.scss
+++ b/apps/theme/formBuilder/styles/theme.scss
@@ -5,7 +5,11 @@
   padding: 0 5px 5px 5px;
   box-sizing: border-box;
   background-color: var(--webiny-theme-color-surface, #ffffff);
-  --box-shadow: none;
+
+  .webiny-pb-base-page-element-style {
+    border: none;
+    box-shadow: none;
+  }
 
   .webiny-fb-form-layout-row,
   .webiny-fb-form-layout-column {
